kubernetes/uc1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uc1-service
spec:
  selector:
    app: uc1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
