kubernetes/uc3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uc3-service
spec:
  selector:
    app: uc3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
